# CRTSolver

./: README.md  README.txt  combined_runtimes.csv  pyproject.toml  requirements.txt  todo.txt
main/: comparative_analysis.ipynb  crt_solver.py  cvc5_solver.py  results_combiner.py  tmp.py  tmp2.py  z3_solver.py
main/crt_components/errors/: handler.py
main/crt_components/helpers/: dto.py  utility.py
main/crt_components/input_output/: reader.py  writer.py
main/crt_components/solvers/: candidate.py  modbvALT.py  modulo.py  modulo_bv.py
main/results/: results_CRTSolver (Bit-Vector Mode).csv  results_CRTSolver (Integer Mode).csv  results_Z3.csv  results_cvc5.csv
main/results/table_generator/: csv_combiner.py  instructions.md  latex_creator.py
main/results/tables/: combined_results.csv  latex_table.txt
main/tests/: solutions.txt
main/tests/4var/4deg/: ghost.smt2  (+1 more)
main/tmp_results/456var/: combined_results.csv  latex_table.txt
main/tmp_results/disjunctions/: disjunctions.csv  no_disjunctions.csv
notebooks/: comparative_analysis.ipynb
reports/: latex_table.txt
reports/generators/: csv_combiner.py  latex_generator.py
results/: combined_results.csv  results_CRTSolver (Bit-Vector Mode).csv  results_CRTSolver (Integer Mode).csv  results_Z3.csv  results_crt_test (Bit-Vector Mode).csv  results_crt_test (Integer Mode).csv  results_cvc5.csv  results_cvc5_test.csv  results_z3_test.csv
results/table_generator/: latex_creator.py
src/crtsolver/solvers/: crt_solver.py  cvc5_solver.py  z3_solver.py
tests/: solutions.txt
third_party_licences/: cvc5_LICENSE
(+37 files in other folders)
